--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.1.0"
+    "php": ">=7.2.0",
+    "laravel/nova": "^3.0"
   },
   "autoload": {
     "psr-4": {
