--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cross-env": "^7.0.3",
     "laravel-mix": "^6.0.29",
     "laravel-nova": "^1.12.3",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14"
   },
   "dependencies": {
     "vue": "^2.6.14"
