--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.2.0",
-    "laravel/nova": "^3.0"
+    "php": ">=8.0",
+    "laravel/nova": "^4.0"
   },
   "autoload": {
     "psr-4": {
@@ -26,5 +26,11 @@
     "sort-packages": true
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://nova.laravel.com"
+    }
+  ]
 }
