--- a/package.json
+++ b/package.json
@@ -5,17 +5,28 @@
     "watch": "mix watch",
     "hot": "mix watch --hot",
     "prod": "mix --production",
-    "format": "prettier --write 'resources/**/*.{js,scss,vue}'"
+    "format": "prettier --write 'resources/**/*.{css,scss,js,vue}'"
   },
   "devDependencies": {
+    "@inertiajs/inertia": "^0.11.0",
+    "@vue/babel-plugin-jsx": "^1.1.1",
+    "axios": "^0.27.2",
     "cross-env": "^7.0.3",
-    "laravel-mix": "^6.0.29",
-    "laravel-nova": "^1.12.3",
-    "prettier": "^2.3.2",
-    "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14"
+    "form-backend-validation": "^2.4.0",
+    "laravel-mix": "^6.0.49",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "prettier": "^2.7.1",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "tailwindcss": "^3.1.5",
+    "terser-webpack-plugin": "^5.3.3",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.7.4",
+    "vuex": "^4.0.2"
   },
   "dependencies": {
-    "vue": "^2.6.14"
+    "vue": "^3.2.37"
   }
 }
